--- a/views/ccpp_customer_information_view.xml
+++ b/views/ccpp_customer_information_view.xml
@@ -214,8 +214,9 @@
                             </div>
                             <field name="province_id"/>
                             <field name="sale_area_id"/>
-                            <field name="job_id"/>
                             <field name="sale_person_id" readonly="True"/>
+                            <field name="domain_job_ids" invisible="True"/>
+                            <field name="job_id" domain="[('id', 'in', domain_job_ids)]"/>
                         </group>
                         <group>
                             <field name="customer_category_id"/>
@@ -296,7 +297,7 @@
                 <field name="date_from" string="Create Date" optional="hide"/>
                 <!--<field name="date_to"/>-->
                 <field name="customer_id"/>
-                <field name="partner_id"/>
+                <field name="partner_id" string="Contact Person"/>
                 <!--<field name="state"/>-->
                 <field name="sale_person_id" string="User"/>
                 <field name="job_id"/>
@@ -396,9 +397,10 @@
                             options="{'no_create':True}"
                             />
                             <field name="domain_partner_ids" invisible="True"/>
-                            <field name="partner_id" context="{'show_title_position':True}" options="{'no_create':True}" domain="[('id','in',domain_partner_ids)]" required="True"/>
-                            <field name="job_id"/>
+                            <field name="partner_id" string="Contact Person" context="{'show_title_position':True}" options="{'no_create':True}" domain="[('id','in',domain_partner_ids)]" required="True"/>
                             <field name="sale_person_id" string="User" readonly="True"/>
+                            <field name="domain_job_ids" invisible="True"/>
+                            <field name="job_id" domain="[('id', 'in', domain_job_ids)]"/>
                         </group>
                         <group>
                             <field name="customer_category_id"/>
@@ -432,7 +434,7 @@
                 <field name="date_from" string="Create Date" optional="hide"/>
                 <!--<field name="date_to"/>-->
                 <field name="customer_id"/>
-                <field name="partner_id"/>
+                <field name="partner_id" string="Contact Person"/>
                 <!--<field name="state"/>-->
                 <field name="sale_person_id" string="User"/>
                 <field name="job_id"/>
@@ -529,11 +531,13 @@
                             attrs="{'required': [('company_name','=',False)], 'invisible':[('company_name','!=', False),('company_name','!=','')]}"
                             options="{'no_quick_create': True}"
                             context="{'create_external_customer':True}"
+                            domain="[('is_company','=',True)]"
                             />
                             <field name="domain_partner_ids" invisible="True"/>
-                            <field name="partner_id" context="{'show_title_position':True, 'create_external_contact':True, 'external_parent': customer_id}" domain="[('id','in',domain_partner_ids)]" required="True" options="{'no_quick_create': True}"/>
-                            <field name="job_id"/>
+                            <field name="partner_id" string="Contact Person" context="{'show_title_position':True, 'create_external_contact':True, 'external_parent': customer_id}" domain="[('id','in',domain_partner_ids)]" required="True" options="{'no_quick_create': True}"/>
                             <field name="sale_person_id" string="User" readonly="True"/>
+                            <field name="domain_job_ids" invisible="True"/>
+                            <field name="job_id" domain="[('id', 'in', domain_job_ids)]"/>
                         </group>
                         <group>
                             <field name="customer_category_id"/>
