--- a/static/src/views/list.xml
+++ b/static/src/views/list.xml
@@ -2,10 +2,16 @@
 <templates xml:space="preserve">
     <t t-name="ccpp.ListButtons" t-inherit="web.ListView.Buttons" t-inherit-mode="primary" owl="1">
 
-        <xpath expr="//button[hasclass('o_list_button_add')]" position="after">
+        <xpath expr="//div[hasclass('o_list_buttons')]" position="inside">
             <button type="button" class="d-none d-md-inline o_button_upload_expense btn btn-primary mx-1" t-on-click.prevent="uploadDocument">
                 Scan
             </button>
         </xpath>
     </t>
+    <!--<t t-name="ccpp.DashboardListRenderer" t-inherit="ccpp.ListRenderer" t-inherit-mode="primary" owl="1">
+        <xpath expr="//div[hasclass('o_list_renderer')]" position="before">
+            <CCPPDashboard/>
+        </xpath>
+    </t>-->
+    
 </templates>
