--- a/views/ccpp_customer_information_view.xml
+++ b/views/ccpp_customer_information_view.xml
@@ -1,29 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-
-    <record id="ccpp_customer_information_action" model="ir.actions.act_window">
-        <field name="name">Customer Information</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">ccpp.customer.information</field>
-        <field name="view_mode">tree,form</field>
-        <field name="domain">[('type','=','customer'),('user_id', '=', uid)]</field>
-        <field name="context">{'default_type': 'customer', 'seasrch_default_groupby_year': 1}</field>
-    </record>
-
-    <record id="ccpp_customer_information_action_view_tree" model="ir.actions.act_window.view">
-        <field name="sequence" eval="11"/>
-        <field name="view_mode">tree</field>
-        <field name="act_window_id" ref="ccpp.ccpp_customer_information_action"/>
-        <field name="view_id" ref="ccpp_customer_information_view_tree"/>
-    </record>
-
-    <record id="ccpp_customer_information_action_view_form" model="ir.actions.act_window.view">
-        <field name="sequence" eval="12"/>
-        <field name="view_mode">form</field>
-        <field name="act_window_id" ref="ccpp.ccpp_customer_information_action"/>
-        <field name="view_id" ref="ccpp_customer_information_view_form"/>
-    </record>
-
     <record id="ccpp_customer_information_search" model="ir.ui.view">
         <field name="name">Customer Information Search</field>
         <field name="model">ccpp.customer.information</field>
@@ -287,6 +263,29 @@
         </field>
     </record>
 
+    <record id="ccpp_customer_information_action" model="ir.actions.act_window">
+        <field name="name">Customer Information</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">ccpp.customer.information</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[('type','=','customer'),('user_id', '=', uid)]</field>
+        <field name="context">{'default_type': 'customer', 'seasrch_default_groupby_year': 1}</field>
+    </record>
+
+    <record id="ccpp_customer_information_action_view_tree" model="ir.actions.act_window.view">
+        <field name="sequence" eval="11"/>
+        <field name="view_mode">tree</field>
+        <field name="act_window_id" ref="ccpp.ccpp_customer_information_action"/>
+        <field name="view_id" ref="ccpp_customer_information_view_tree"/>
+    </record>
+
+    <record id="ccpp_customer_information_action_view_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="12"/>
+        <field name="view_mode">form</field>
+        <field name="act_window_id" ref="ccpp.ccpp_customer_information_action"/>
+        <field name="view_id" ref="ccpp_customer_information_view_form"/>
+    </record>
+
     <!-- customer internal -->
     <record id="ccpp_internal_information_view_tree" model="ir.ui.view">
         <field name="name">ccpp.internal.information.view.tree</field>
@@ -322,31 +321,6 @@
                 </group>
             </search>
         </field>
-    </record>
-
-    <record id="ccpp_internal_information_action" model="ir.actions.act_window">
-        <field name="name">Internal Customer</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">ccpp.customer.information</field>
-        <field name="view_mode">tree,form</field>
-        <field name="search_view_id" ref="ccpp_internal_information_search"/>
-        <field name="view_id" ref="ccpp_internal_information_view_tree"/>
-        <field name="domain">[('type','=','internal'),('user_id', '=', uid)]</field>
-        <field name="context">{'default_type': 'internal', 'search_default_groupby_year': 1, 'default_my_company': True}</field>
-    </record>
-
-    <record id="ccpp_internal_information_action_view_tree" model="ir.actions.act_window.view">
-        <field name="sequence" eval="11"/>
-        <field name="view_mode">tree</field>
-        <field name="act_window_id" ref="ccpp.ccpp_internal_information_action"/>
-        <field name="view_id" ref="ccpp_internal_information_view_tree"/>
-    </record>
-
-    <record id="ccpp_internal_information_action_view_form" model="ir.actions.act_window.view">
-        <field name="sequence" eval="12"/>
-        <field name="view_mode">form</field>
-        <field name="act_window_id" ref="ccpp.ccpp_internal_information_action"/>
-        <field name="view_id" ref="ccpp_internal_information_view_form"/>
     </record>
 
     <record id="ccpp_internal_information_view_form" model="ir.ui.view">
@@ -424,6 +398,31 @@
         </field>
     </record>
 
+    <record id="ccpp_internal_information_action" model="ir.actions.act_window">
+        <field name="name">Internal Customer</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">ccpp.customer.information</field>
+        <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="ccpp_internal_information_search"/>
+        <field name="view_id" ref="ccpp_internal_information_view_tree"/>
+        <field name="domain">[('type','=','internal'),('user_id', '=', uid)]</field>
+        <field name="context">{'default_type': 'internal', 'search_default_groupby_year': 1, 'default_my_company': True}</field>
+    </record>
+
+    <record id="ccpp_internal_information_action_view_tree" model="ir.actions.act_window.view">
+        <field name="sequence" eval="11"/>
+        <field name="view_mode">tree</field>
+        <field name="act_window_id" ref="ccpp.ccpp_internal_information_action"/>
+        <field name="view_id" ref="ccpp_internal_information_view_tree"/>
+    </record>
+
+    <record id="ccpp_internal_information_action_view_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="12"/>
+        <field name="view_mode">form</field>
+        <field name="act_window_id" ref="ccpp.ccpp_internal_information_action"/>
+        <field name="view_id" ref="ccpp_internal_information_view_form"/>
+    </record>
+
     <!-- customer external -->
     <record id="ccpp_external_information_view_tree" model="ir.ui.view">
         <field name="name">ccpp.external.information.view.tree</field>
@@ -459,31 +458,6 @@
                 </group>
             </search>
         </field>
-    </record>
-
-    <record id="ccpp_external_information_action" model="ir.actions.act_window">
-        <field name="name">External Customer</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">ccpp.customer.information</field>
-        <field name="view_mode">tree,form</field>
-        <field name="search_view_id" ref="ccpp_external_information_search"/>
-        <field name="view_id" ref="ccpp_external_information_view_tree"/>
-        <field name="domain">[('type','=','external'),('user_id', '=', uid)]</field>
-        <field name="context">{'default_type': 'external', 'search_default_groupby_year': 1}</field>
-    </record>
-
-    <record id="ccpp_external_information_action_view_tree" model="ir.actions.act_window.view">
-        <field name="sequence" eval="11"/>
-        <field name="view_mode">tree</field>
-        <field name="act_window_id" ref="ccpp.ccpp_external_information_action"/>
-        <field name="view_id" ref="ccpp_external_information_view_tree"/>
-    </record>
-
-    <record id="ccpp_external_information_action_view_form" model="ir.actions.act_window.view">
-        <field name="sequence" eval="12"/>
-        <field name="view_mode">form</field>
-        <field name="act_window_id" ref="ccpp.ccpp_external_information_action"/>
-        <field name="view_id" ref="ccpp_external_information_view_form"/>
     </record>
 
     <record id="ccpp_external_information_view_form" model="ir.ui.view">
@@ -559,6 +533,31 @@
                 </div>
             </form>
         </field>
+    </record>
+
+    <record id="ccpp_external_information_action" model="ir.actions.act_window">
+        <field name="name">External Customer</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">ccpp.customer.information</field>
+        <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="ccpp_external_information_search"/>
+        <field name="view_id" ref="ccpp_external_information_view_tree"/>
+        <field name="domain">[('type','=','external'),('user_id', '=', uid)]</field>
+        <field name="context">{'default_type': 'external', 'search_default_groupby_year': 1}</field>
+    </record>
+
+    <record id="ccpp_external_information_action_view_tree" model="ir.actions.act_window.view">
+        <field name="sequence" eval="11"/>
+        <field name="view_mode">tree</field>
+        <field name="act_window_id" ref="ccpp.ccpp_external_information_action"/>
+        <field name="view_id" ref="ccpp_external_information_view_tree"/>
+    </record>
+
+    <record id="ccpp_external_information_action_view_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="12"/>
+        <field name="view_mode">form</field>
+        <field name="act_window_id" ref="ccpp.ccpp_external_information_action"/>
+        <field name="view_id" ref="ccpp.ccpp_external_information_view_form"/>
     </record>
 
     <!--<menuitem id="menu_ccpp_customer_information" name="Customer Information" parent="crm.crm_menu_sales" action="ccpp_customer_information_action" sequence="101"/>-->
